[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.17"
spl-token = "4.0"
spl-associated-token-account = "2.3"
# cp-swap = { git = "https://github.com/raydium-io/cp-swap", branch = "main" }
# streamflow = { git = "https://github.com/streamflow-finance/streamflow-program-library", branch = "master" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
