[package]
name = "star-damm-honorary-fee"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "star_damm_honorary_fee"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
# Add cp-amm and streamflow dependencies when available
# cp-swap = "0.4.0"  # Meteora cp-amm program
# streamflow = "0.2.0"  # Streamflow program

